# teaching-software-engineering-2025-summer

./: .gitignore  README.md  dockerfile  dockerfile.txt  main.py  pyproject.toml  requirements.txt  run.sh
popov-a-u/: dockerfile.txt  run.sh
savchenko-d-v/: .gitignore  config.py  dockerfile  run.sh
savchenko-d-v/src/: bot.py  llm.py  mark.py  start.py
src/: llm.py  main.py  mark.py
tihonova-a-m/: dockerfile  run.sh
юрасова-в-в/: dockerfile  run.sh
